[1.3.2-dev-2]更新CrypticLib版本